# LumaBet_Contract

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
docs/: contracts.md
lumabet_core/: Cargo.toml
lumabet_core/src/: lib.rs
lumabet_dice/: Cargo.toml
lumabet_dice/src/: lib.rs
lumabet_rng/: Cargo.toml
lumabet_rng/src/: lib.rs
scripts/: deploy_contracts.sh  fund_testnet.sh  seed_db.sql
